secondfile/objects/RDS_Validation__c.object
<CustomObject>
    <fields>
        <fullName>AT_T_Edge_IP_Address__c</fullName>
        <label>AT&amp;T Edge IP Address v4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_T_Edge_IP_Address_v6__c</fullName>
        <label>AT&amp;T Edge IP Address v6</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVPN_COS_Speed_BEID__c</fullName>
        <label>AVPN COS Speed BEID</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AVPN_COS_Speed_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>55501</fullName>
                </value>
                <value>
                    <fullName>55502</fullName>
                </value>
                <value>
                    <fullName>55503</fullName>
                </value>
                <value>
                    <fullName>55504</fullName>
                </value>
                <value>
                    <fullName>55505</fullName>
                </value>
                <value>
                    <fullName>55506</fullName>
                </value>
                <value>
                    <fullName>55507</fullName>
                </value>
                <value>
                    <fullName>55508</fullName>
                </value>
                <value>
                    <fullName>55509</fullName>
                </value>
                <value>
                    <fullName>55510</fullName>
                </value>
                <value>
                    <fullName>55511</fullName>
                </value>
                <value>
                    <fullName>55512</fullName>
                </value>
                <value>
                    <fullName>55513</fullName>
                </value>
                <value>
                    <fullName>55514</fullName>
                </value>
                <value>
                    <fullName>55515</fullName>
                </value>
                <value>
                    <fullName>55516</fullName>
                </value>
                <value>
                    <fullName>55517</fullName>
                </value>
                <value>
                    <fullName>55518</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVPN_COS_Speed_Name__c</fullName>
        <label>AVPN COS Speed Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>COS Option - 1.544M/1.536M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 3.072/3.088M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 4.608/4.632M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 6.144/6.176M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 5M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 7.680/7.720M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 9.216/9.264</fullName>
                </value>
                <value>
                    <fullName>COS Option - 10M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 10.752/10.808M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 12.288/12.352M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 20M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 50M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 45M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 100M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 250M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 500M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 600M</fullName>
                </value>
                <value>
                    <fullName>COS Option - 1G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVPN_Unilink_Speed_BEID__c</fullName>
        <label>AVPN Unilink Speed BEID</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AVPN_Unilink_Speed_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>18442</fullName>
                </value>
                <value>
                    <fullName>18446</fullName>
                </value>
                <value>
                    <fullName>18448</fullName>
                </value>
                <value>
                    <fullName>18450</fullName>
                </value>
                <value>
                    <fullName>18451</fullName>
                </value>
                <value>
                    <fullName>18452</fullName>
                </value>
                <value>
                    <fullName>18454</fullName>
                </value>
                <value>
                    <fullName>18455</fullName>
                </value>
                <value>
                    <fullName>18457</fullName>
                </value>
                <value>
                    <fullName>18459</fullName>
                </value>
                <value>
                    <fullName>18463</fullName>
                </value>
                <value>
                    <fullName>18466</fullName>
                </value>
                <value>
                    <fullName>18469</fullName>
                </value>
                <value>
                    <fullName>18470</fullName>
                </value>
                <value>
                    <fullName>18475</fullName>
                </value>
                <value>
                    <fullName>18476</fullName>
                </value>
                <value>
                    <fullName>18481</fullName>
                </value>
                <value>
                    <fullName>20413</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVPN_Unilink_Speed_Name__c</fullName>
        <label>AVPN Unilink Speed Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MPLS Unilink Charge - 1.544M/1.536M</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-3.088 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-4.632 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-6.176 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-5 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-7.720 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-9.264 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-10 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-10.808 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-12.352 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-20 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-50 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-45 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-100 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-500 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge-600 MBPS</fullName>
                </value>
                <value>
                    <fullName>MPLS Unilink Charge - 1G</fullName>
                </value>
                <value>
                    <fullName>MPLS Port Unilink Charge-250MBPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Speed__c</fullName>
        <label>Access Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Port_Speed_Bandwidth__c</fullName>
        <formula>(VALUE(Current_Port_Speed__c) - (Current_Vlan_Speed_Total__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Port Speed Bandwidth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COS_Profile_ID__c</fullName>
        <label>COS Profile ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>103</fullName>
                </value>
                <value>
                    <fullName>104</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>106</fullName>
                </value>
                <value>
                    <fullName>107</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>119</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>121</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>123</fullName>
                </value>
                <value>
                    <fullName>124</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>161</fullName>
                </value>
                <value>
                    <fullName>162</fullName>
                </value>
                <value>
                    <fullName>163</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CVLAN_Name__c</fullName>
        <label>CVLAN Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_of_Service__c</fullName>
        <label>Class of Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Access_Speed__c</fullName>
        <label>Current Access Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Class_of_Service__c</fullName>
        <label>Current Class of Service</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Cos_Profile_ID__c</fullName>
        <label>Current Cos Profile ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>103</fullName>
                </value>
                <value>
                    <fullName>104</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>106</fullName>
                </value>
                <value>
                    <fullName>107</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>119</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>121</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>123</fullName>
                </value>
                <value>
                    <fullName>124</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>161</fullName>
                </value>
                <value>
                    <fullName>162</fullName>
                </value>
                <value>
                    <fullName>163</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_IP_Verison__c</fullName>
        <label>Current IP Verison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Interface_Type__c</fullName>
        <label>Current Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_MBC__c</fullName>
        <label>Current MBC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_No_of_VLANS__c</fullName>
        <label>Current # of VLANS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Port_Speed__c</fullName>
        <label>Current Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Product_Type__c</fullName>
        <label>Current Product Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SP_email__c</fullName>
        <label>Current_SP email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_UBB__c</fullName>
        <label>Current UBB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Unilink__c</fullName>
        <label>Current Unilink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Vlan_Speed_Total__c</fullName>
        <label>Current Vlan Speed Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Edge_IP_Address__c</fullName>
        <label>Customer Edge IP Address v4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Edge_IP_Address_v6__c</fullName>
        <label>Customer_Edge_IP_Address v6</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealHashID__c</fullName>
        <description>Technical Field</description>
        <formula>Premise__r.DealHash__r.Id</formula>
        <label>Deal Hash ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disconnected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disconnected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Egress_COS_Profile_ID__c</fullName>
        <label>Egress COS Profile ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egress_Profile_ID__c</fullName>
        <label>Egress Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Access_Speed_Technical__c</fullName>
        <label>Existing Access Speed Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Port_Speed_Technical__c</fullName>
        <label>Existing Port Speed Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Port_Id__c</fullName>
        <label>Group Port Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Version__c</fullName>
        <label>IP Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_COS_Profile_ID__c</fullName>
        <label>Ingress COS Profile ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>103</fullName>
                </value>
                <value>
                    <fullName>104</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>106</fullName>
                </value>
                <value>
                    <fullName>107</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>119</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>121</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>123</fullName>
                </value>
                <value>
                    <fullName>124</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>161</fullName>
                </value>
                <value>
                    <fullName>162</fullName>
                </value>
                <value>
                    <fullName>163</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingress_Profile_ID__c</fullName>
        <label>Ingress Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <label>Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsATOM__c</fullName>
        <formula>Premise__r.DealHash__r.Opportunity__r.ATOM_Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsATOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBID__c</fullName>
        <formula>Premise__r.DealHash__r.Opportunity__r.IsMigratedDeal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsBID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MACD_Action__c</fullName>
        <description>Field to capture the MACD Action to be performed when tiggered from Portal. Used as an identifier to decide on Opportunity Creation / Opportunity Cloning</description>
        <label>MACD Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Change_Type__c</fullName>
        <label>MACD Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADD VLAN</fullName>
                </value>
                <value>
                    <fullName>Disconnect VLAN</fullName>
                </value>
                <value>
                    <fullName>UBB Add</fullName>
                </value>
                <value>
                    <fullName>UBB Change</fullName>
                </value>
                <value>
                    <fullName>UBB Remove</fullName>
                </value>
                <value>
                    <fullName>Port/Access Speed Change</fullName>
                </value>
                <value>
                    <fullName>CoS Change</fullName>
                </value>
                <value>
                    <fullName>Port Speed Change</fullName>
                </value>
                <value>
                    <fullName>Add CoS</fullName>
                </value>
                <value>
                    <fullName>Remove CoS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MACD_Feature_Change_Update__c</fullName>
        <label>MACD Feature Change Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADD VLAN</fullName>
                </value>
                <value>
                    <fullName>Disconnect VLAN</fullName>
                </value>
                <value>
                    <fullName>UBB Add</fullName>
                </value>
                <value>
                    <fullName>UBB Change</fullName>
                </value>
                <value>
                    <fullName>UBB Remove</fullName>
                </value>
                <value>
                    <fullName>CoS Change</fullName>
                </value>
                <value>
                    <fullName>Port Speed Change</fullName>
                </value>
                <value>
                    <fullName>VLAN Speed Change</fullName>
                </value>
                <value>
                    <fullName>Add CoS</fullName>
                </value>
                <value>
                    <fullName>Remove CoS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBC_MonthlyPrice__c</fullName>
        <description>To store the monthly price during MACD UBB</description>
        <label>MBC_MonthlyPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBC_Speed_BEID__c</fullName>
        <label>MBC Speed BEID</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MBC__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>19536</fullName>
                </value>
                <value>
                    <fullName>19540</fullName>
                </value>
                <value>
                    <fullName>19566</fullName>
                </value>
                <value>
                    <fullName>19576</fullName>
                </value>
                <value>
                    <fullName>19586</fullName>
                </value>
                <value>
                    <fullName>19590</fullName>
                </value>
                <value>
                    <fullName>8511</fullName>
                </value>
                <value>
                    <fullName>8513</fullName>
                </value>
                <value>
                    <fullName>8519</fullName>
                </value>
                <value>
                    <fullName>8345</fullName>
                </value>
                <value>
                    <fullName>8350</fullName>
                </value>
                <value>
                    <fullName>8355</fullName>
                </value>
                <value>
                    <fullName>8357</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBC_Speed_Name__c</fullName>
        <label>MBC Speed Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MBC__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MPLS FLEX Ethernet-10M</fullName>
                </value>
                <value>
                    <fullName>MPLS FLEX Ethernet-20M</fullName>
                </value>
                <value>
                    <fullName>MPLS FLEX Ethernet-100M</fullName>
                </value>
                <value>
                    <fullName>MPLS FLEX Ethernet-250M</fullName>
                </value>
                <value>
                    <fullName>MPLS FLEX Ethernet-500M</fullName>
                </value>
                <value>
                    <fullName>MPLS FLEX Ethernet-600M</fullName>
                </value>
                <value>
                    <fullName>10 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>20 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>50 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>100 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>250 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>500 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>600 Mbps Hi Cap Flex Bandwidth Commitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MBC__c</fullName>
        <label>MBC</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIS_COS_Speed_BEID__c</fullName>
        <label>MIS COS Speed BEID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8814</fullName>
                </value>
                <value>
                    <fullName>8819</fullName>
                </value>
                <value>
                    <fullName>8821</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIS_COS_Speed_Name__c</fullName>
        <label>MIS COS Speed Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CoS w/ MIS HiCap T3 or Ethernet @ 5M</fullName>
                </value>
                <value>
                    <fullName>CoS w/ MIS HiCap T3 or Ethernet @ 10M</fullName>
                </value>
                <value>
                    <fullName>CoS w/ MIS HiCap T3 or Ethernet @ 20M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Access_Speed_Technical__c</fullName>
        <label>New Access Speed Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Port_Speed_Technical__c</fullName>
        <label>New Port Speed Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_VLAN_Speed__c</fullName>
        <label>New VLAN Speed</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Disconnected_VLAN__c</fullName>
        <label>No_of_Disconnected_VLAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_VLANS__c</fullName>
        <label># of VLANS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_VLAN_for_VLAN_Add__c</fullName>
        <label>No of VLAN for VLAN Add</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverageCharge__c</fullName>
        <description>Overage charges for MACD</description>
        <label>OverageCharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Id_Technical__c</fullName>
        <description>Technical field not required on Page Layout.</description>
        <label>Port Id Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>